@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-09-16T00:41:39Z",
+  "timestamp" : "2024-09-17T00:32:20Z",
   "count_outdated" : 84,
   "uniques_outdated" : 66,
-  "count" : 86,
-  "uniques" : 68,
+  "count" : 87,
+  "uniques" : 69,
   "clones" : [
     {
       "timestamp": "2024-09-14T00:00:00Z",
@@ -16,6 +16,15 @@
     },
     {
       "timestamp": "2024-09-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-09-16T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
